--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,107 @@
-asgiref==3.7.2
-Django==5.0.2
-psycopg2==2.9.9
-psycopg2-binary==2.9.9
-sqlparse==0.4.4
-typing_extensions==4.10.0
-tzdata==2024.1
+asgiref==3.5.2
+async-timeout==4.0.2
+attrs==23.1.0
+autobahn==23.6.2
+Automat==22.10.0
+beautifulsoup4==4.12.0
+bootstrap4==0.1.0
+browserdriver==0.0.6
+certifi==2022.9.14
+cffi==1.15.1
+channels==4.0.0
+channels-redis==4.1.0
+chardet==3.0.4
+charset-normalizer==2.1.1
+click==8.1.3
+colorama==0.4.5
+comtypes==1.1.14
+constantly==15.1.0
+crayons==0.4.0
+crispy-bootstrap5==0.7
+cryptography==41.0.2
+daphne==4.0.0
+decorator==4.4.2
+defusedxml==0.7.1
+dj-database-url==1.3.0
+Django==4.1.7
+django-allauth==0.54.0
+django-bootstrap4==22.3
+django-crispy-forms==2.0
+django-debug-toolbar==4.1.0
+Django-Gtts==0.4
+django-heroku==0.3.1
+django-mathfilters==1.0.0
+django-redis==5.3.0
+django-redis-sessions==0.6.2
+django-redis-views==0.2.2
+django-rest-knox==4.2.0
+djangorestframework==3.14.0
+googletrans==4.0.0rc1
+gTTS==2.4.0
+gunicorn==20.1.0
+h11==0.9.0
+h2==3.2.0
+hpack==3.0.0
+hstspreload==2022.9.1
+httpcore==0.9.1
+httpx==0.13.3
+hyperframe==5.2.0
+hyperlink==21.0.0
+idna==2.10
+imageio==2.32.0
+imageio-ffmpeg==0.4.9
+incremental==22.10.0
+moviepy==1.0.3
+msgpack==1.0.5
+mysql-connector-python==8.0.30
+mysqlclient==2.1.1
+numpy==1.24.3
+oauthlib==3.2.2
+opencv-python==4.7.0.72
+pickle-mixin==1.0.2
+piexif==1.1.3
+Pillow==9.5.0
+playsound==1.3.0
+proglog==0.1.10
+protobuf==3.20.1
+psycopg2==2.9.5
+psycopg2-binary==2.9.7
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+PyAudio==0.2.13
+pycparser==2.21
+pydub==0.25.1
+pygame==2.1.1
+PyJWT==2.8.0
+pyOpenSSL==23.2.0
+PyPDF2==3.0.1
+pypiwin32==223
+pyshorteners==1.0.1
+python3-openid==3.2.0
+pyttsx3==2.90
+pytz==2023.3
+pywin32==304
+redis==4.6.0
+reportlab==4.1.0
+requests==2.28.1
+requests-oauthlib==1.3.1
+rfc3986==1.5.0
+service-identity==23.1.0
+six==1.16.0
+sniffio==1.3.0
+social-auth-app-django==5.4.0
+social-auth-core==4.5.2
+soupsieve==2.4
+SpeechRecognition==3.10.0
+sqlparse==0.4.2
+stegano==0.11.2
+stripe==5.5.0
+tqdm==4.66.1
+Twisted==22.10.0
+twisted-iocpsupport==1.0.3
+txaio==23.1.1
+typing_extensions==4.5.0
+tzdata==2022.1
+urllib3==1.26.12
+whitenoise==6.4.0
+zope.interface==6.0
